<resources>
    <string name="app_name">Mapka</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="START_BUTTON">START</string>
    <string name="MAP">MAP</string>
    <string name="HISTORY">HISTORY</string>
    <string name="SHARE">SHARE</string>
    <string name="WELCOME_TEXT">Welcome in Mapka !</string>
    <string name="DESCRIPTION_TEXT">With Mapka you can check your current localization, share it via sms and log it at anytime!</string>
    <string name="PL_ENG">ENG/PL</string>
    <string name="LOGO">logo</string>
    <string name="Share_localization">Share localization</string>
    <string name="send_sms">Send SMS</string>
    <string name="phone_number">phone number</string>
    <string name="choose_contact">Choose contact</string>
    <string name="delete_location">Delete location</string>
    <string name="Are_you_sure">Are you sure, you want to delete location?</string>


</resources>
