<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.WelcomeActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/welcome_text_view"
            android:text="@string/WELCOME_TEXT"
            android:textSize="50sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_above="@+id/logo_image_view"
    />


    <ImageView
            android:layout_width="237dp"
            android:layout_height="195dp"
            android:id="@+id/logo_image_view"
            android:src="@drawable/logo4"
            android:contentDescription="@string/LOGO"
            android:padding="10sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8sp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8sp" android:layout_marginBottom="8sp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.423"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/description_text_view"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DESCRIPTION_TEXT"
            android:textSize="20sp"
            android:textAlignment="center"
            android:padding="10sp"
            android:id="@+id/description_text_view"
            android:layout_marginBottom="8sp"
            app:layout_constraintBottom_toTopOf="@+id/button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8sp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8sp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/button"
        />

    <Button
            android:text="@string/START_BUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/colorPaleVioletRed"
            android:background="@drawable/button_border"
            android:textAlignment="center"
            android:includeFontPadding="true"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onButtonClickStart"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8sp"
            android:layout_marginBottom="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PL_ENG"
            android:textSize="15sp"
            android:textAlignment="center"
            android:padding="10sp"
            android:textColor="@color/colorRoyalBlue"
            android:textStyle="bold"
            android:layout_marginStart="8sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10sp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8sp" app:layout_constraintEnd_toStartOf="@+id/pl_eng_switch"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_toStartOf="@id/pl_eng_switch"

    />

    <Switch
            android:layout_width="50sp"
            android:layout_height="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16sp" android:layout_marginTop="10sp" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/pl_eng_switch"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
    />

</RelativeLayout>