<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
>


    <Button
            android:text="@string/send_sms"
            android:layout_width="127dp"
            android:layout_height="wrap_content" android:id="@+id/send_button" android:layout_alignParentEnd="true"
            android:layout_marginEnd="141dp"
            android:layout_alignParentStart="true" android:layout_marginStart="142dp"
            android:layout_marginTop="95dp" android:layout_below="@+id/number_text"/>
    <EditText
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/number_text"
            android:layout_alignParentStart="true" android:layout_marginStart="94dp"
            android:layout_alignParentEnd="true" android:layout_marginEnd="127dp"
            android:hint="@string/phone_number" android:inputType="phone" android:layout_marginTop="49dp"
            android:layout_below="@+id/textView2"/>
    <TextView
            android:text="@string/Share_localization"
            android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="50dp" android:layout_alignParentTop="true" android:textStyle="bold"
            android:textAlignment="center" android:textSize="30sp"
            android:layout_alignParentStart="true" android:layout_marginStart="0dp"
            android:layout_width="match_parent"/>
    <ImageButton
            android:layout_width="46dp"
            android:layout_height="47dp" app:srcCompat="@drawable/contacts_button"
            android:id="@+id/contact_picker" android:scaleType="fitXY" android:layout_marginTop="36dp"
            android:layout_below="@+id/textView2" android:layout_alignParentEnd="true"
            android:layout_marginEnd="60dp" android:layout_alignParentStart="true" android:layout_marginStart="305dp"
            android:adjustViewBounds="true" android:background="@drawable/black_transparent_pixel"/>
</RelativeLayout>